--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<app-header></app-header>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>BootStrap is working </h1>
+    </div>
+  </div>
+</div>
