Added components to shopping list

--- a/src/app/shop-list/shop-list.component.html
+++ b/src/app/shop-list/shop-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  shop-list works!
-</p>
+<div class="row">
+  <div class="col-xs-10">
+    <app-shop-edit></app-shop-edit>
+    <hr>
+    <p>The list</p>
+  </div>
+</div>
