--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1>BootStrap is working </h1>
+
+      <app-recipes></app-recipes>
+      <app-shop-list></app-shop-list>
+
     </div>
   </div>
 </div>
